fix: alignment of imgs in grid block (#681)

--- a/src/theme/ItaliaTheme/Blocks/_gridBlock.scss
+++ b/src/theme/ItaliaTheme/Blocks/_gridBlock.scss
@@ -54,6 +54,7 @@
     }
     &.image img {
       object-fit: contain;
+      object-position: center;
     }
   }
 
